--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build": "cd frontend && npm install && npm run build",
     "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
   },
   "author": "",
@@ -21,5 +22,6 @@
   "devDependencies": {
     "eslint": "^8.5.0",
     "nodemon": "^2.0.15"
-  }
+  },
+  "engines": {"node":"12.4.0", "npm": "6.9.0"}
 }
